🐛 Fixed blog tags not aligning center on TINY screen sized (250px -380px)

--- a/src/pages/blog/menu/posts/posts.scss
+++ b/src/pages/blog/menu/posts/posts.scss
@@ -401,10 +401,11 @@
       .right-section {
         flex-direction: column;
         align-items: left;
+        margin-left: 0;
 
         .date {
           width: calc(100% - 19px);
-          text-align: left;
+          text-align: center;
         }
       }
     }
